# WordStatistic

./: .clang-format  CMakeLists.txt  README.md  controller.cpp  controller.h  histogram.qml  main.cpp  main.qml  words_model.cpp  words_model.h
